--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,20 @@
+
 {
-  "manifest_version": 2,
-
-  "name": "Geoff's Sample extension",
-  "description": "under-construction",
-  "version": "1.0",
-
+  "name": "slimed",
+  "description": "Make the page green",
+  "version": "2.0",
+  "permissions": [
+    "activeTab"
+  ],
+  "background": {
+    "scripts": ["popup.js"],
+    "persistent": false
+  },
   "browser_action": {
+    "default_title": "Make this page red",
     "default_icon": "Emoticon 40 Alien 2.png",
-    "default_popup": "popup.html",
+    /*"default_popup": "popup.html",*/
     "default_title": "Do it! Do it now!"
   },
-  "permissions": [
-    "activeTab",
-    "https://ajax.googleapis.com/"
-  ]
+  "manifest_version": 2
 }
